--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "mdbreact": "^4.27.0",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.13.1",
-    "react-awesome-button": "^6.5.1",
     "react-dom": "^16.13.1",
+    "react-meta-tags": "^0.7.4",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-textarea-autosize": "^8.0.1"
+    "react-textarea-autosize": "^8.0.1",
+    "react-wow": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
