--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "mobx-react-lite": "^1.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-meta-tags": "^0.7.4",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.1.2",
