--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@csstools/normalize.css": "^10.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,9 +11,12 @@
     "mobx-react-lite": "^1.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-font-loader": "^1.1.0",
     "react-hook-form": "^5.7.2",
     "react-meta-tags": "^0.7.4",
     "react-preloaders": "^3.0.3",
+    "react-progressive-image-loading": "^3.0.3",
+    "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-textarea-autosize": "^8.0.1",
