--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-google-font-loader": "^1.1.0",
     "react-hook-form": "^5.7.2",
+    "react-lazyload": "^2.6.8",
     "react-meta-tags": "^0.7.4",
     "react-preloaders": "^3.0.3",
     "react-progressive-image-loading": "^3.0.3",
