--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,10 @@
     "react-lazyload": "^2.6.8",
     "react-meta-tags": "^0.7.4",
     "react-preloaders": "^3.0.3",
-    "react-progressive-image-loading": "^3.0.3",
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-textarea-autosize": "^8.0.1",
-    "react-wow": "^1.0.0"
+    "react-textarea-autosize": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
