--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "mobx": "^5.15.4",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.13.1",
+    "react-content-loader": "^5.0.4",
     "react-dom": "^16.13.1",
     "react-google-font-loader": "^1.1.0",
     "react-hook-form": "^5.7.2",
+    "react-icons": "^3.10.0",
+    "react-iframe": "^1.8.0",
     "react-lazyload": "^2.6.8",
     "react-meta-tags": "^0.7.4",
     "react-preloaders": "^3.0.3",
