--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-content-loader": "^5.0.4",
     "react-dom": "^16.13.1",
     "react-google-font-loader": "^1.1.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^5.7.2",
     "react-icons": "^3.10.0",
     "react-iframe": "^1.8.0",
